@@ -4,6 +4,8 @@
 
 --------------------------------------------------------------------------------
 
+run flawfinder, fix bugs it reveals
+
 hot dog's php suspended session problem
 
 david fourum's pear db fixes/bug reports
